# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================

# 名前空間の定義
set ( YM_NSNAME "nsYm" )


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================

ym_gen_header ()


# ===================================================================
# インクルードパスの設定
# ===================================================================

include_directories (
  ${PROJECT_BINARY_DIR}/include
  ${PROJECT_SOURCE_DIR}/ym-common/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( tests )


# ===================================================================
# コンフィグレーション依存のファイルの生成
# ===================================================================


# ===================================================================
#  ソースの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================
