
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  テスト用のターゲットの設定
# ===================================================================

ym_add_gtest ( common_Array_test
  ArrayTest.cc
  )

ym_add_gtest ( common_Range_test
  RangeTest.cc
  )


# ===================================================================
#  timer_test
# ===================================================================

add_executable ( timer_test
  timer_test.cc
  )


# ===================================================================
#  multitimer_test
# ===================================================================

add_executable ( multitimer_test
  multitimer_test.cc
  )
